--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,13 @@
 @font-face {
+  font-family: 'Source Code Pro';
+  src: url('SourceCodePro-Regular.eot'); /* IE9 Compat Modes */
+  src: url('SourceCodePro-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('SourceCodePro-Regular.woff') format('woff'), /* Pretty Modern Browsers */
+       url('SourceCodePro-Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('SourceCodePro-Regular.svg#svgbeon') format('svg'); /* Legacy iOS */
+}
+
+@font-face {
   font-family: 'Beon';
   src: url('beon-webfont.eot'); /* IE9 Compat Modes */
   src: url('beon-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -7,6 +16,7 @@
        url('beon-webfont.svg#svgbeon') format('svg'); /* Legacy iOS */
 }
 
+
 * {
     margin: 0;
     padding: 0;
@@ -14,6 +24,10 @@
 
 html, body {
     height: 100%;
+}
+
+body {
+    font-family: 'Source Code Pro';
 }
 
 #scroll {
@@ -61,6 +75,7 @@ html, body {
     background-color: #1d3d63;
     border-top: 1px solid #1d3d63;
     overflow-x: hidden;
+    overflow-y: visible;
 }
 
 #background #gradient {
@@ -76,12 +91,13 @@ html, body {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#1d3d63',GradientType=0 );
 }
 
-#background #zig-zag {
+#zig-zag {
     height: 300px;
     width: 100%;
     background-image: url(../img/Header_zigzag_bckgrnd.png);
     background-repeat: repeat-x;
     position: absolute;
+    z-index: 1;
 }
 
 #background #welcome {
@@ -91,9 +107,10 @@ html, body {
     font-size: 200%;
     left: 5%;
     top: 5%;
+    z-index: 2;
 }
 
-#background #welcome span {
+#flash {
     animation: flicker 4s infinite;
 }
 
@@ -123,9 +140,11 @@ html, body {
 #diamonds-wrap {
     height: 400px;
     width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
+    left: 50%;
+    top: -300px;
+    position: absolute;
+    transform: translateX(-50%);
+    z-index: 10;
 }
 
 #diamonds-wrap .diamond {
@@ -160,7 +179,185 @@ html, body {
     left: auto;
 }
 
-section {
-    height: 100%;
+#bio {
     width: 100%;
+    font-family: 'Source Code Pro', monospace;
+    position: relative;
+    z-index: 1;
+    border-top: 1px solid #1d3d63;
+    background-color: #1d3d63;
+}
+
+#bio #bio-wrap {
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 100px;
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+#bio h1 {
+    font-family: 'Beon', sans-serif;
+    color: #333;
+    font-weight: 100;
+    padding: 50px 20px;
+}
+
+#bio p {
+    padding: 1rem 2rem;
+    color: #333;
+}
+
+#portfolio {
+    position: relative;
+}
+
+#portfolio h1 {
+    font-family: 'Beon', sans-serif;
+    color: #fff;
+    font-weight: 100;
+    font-size: 40px;
+    padding: 150px 20px 50px 20px;
+    text-align: center;
+    background-color: #1d3d63;
+}
+
+#portfolio #zig-zag-background {
+    background: #000000;
+    background: -moz-linear-gradient(top, #fff 0%, #1a375a 77%, #1d3d63 88%, #1d3d63 100%);
+    background: -webkit-linear-gradient(top, #1d3d63 0%, 1d3d63 10%, #1a375a 35%,#fff 60%,#fff 100%);
+    background: linear-gradient(to bottom, #1d3d63 0%, #1d3d63 5%, #fff 25%, #fff 100%);
+    height: 300px;
+    width: 100%;
+    position: absolute;
+}
+
+#portfolio #diamond-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#portfolio .grid {
+    list-style-type: none;
+    transform: rotate(45deg);
+    position: relative;
+    height: 870px;
+    width: 870px; 
+    margin: 50px;
+    padding: 0;
+    z-index: 2;
+}
+
+#portfolio .grid {
+    margin-top: 180px
+}
+
+#portfolio .grid li {
+    width: 400px;
+    height: 400px;
+    margin: 20px;
+    background-color: #fff;
+    position: absolute;
+    overflow: hidden;
+    cursor: pointer;
+}
+    
+#portfolio .grid li div {
+    display: block;
+    width: 150%;
+    height: 150%;
+    margin-top: -100px;
+    margin-left: -100px;
+    background-size: cover;
+    transform: rotate(-45deg);
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+    
+#portfolio .grid li:first-child {
+    top: 0;
+    left: 0;
+}
+#portfolio .grid li:nth-child(2) {
+    bottom: 0;
+    left: 0;
+}
+
+#portfolio .grid li:nth-child(3) {
+    top: 0;
+    right: 0;
+}
+
+#portfolio .grid li:nth-child(4) {
+    bottom: 0;
+    right: 0;
+}
+
+.show1 {
+  background-image: url(http://i0.wp.com/www.ucreative.com/wp-content/uploads/2011/10/Horror-Movie-Posters-19.jpg?w=500);
+  background-position: top center;
+}
+
+.show2 {
+  background-image: url(http://a.dilcdn.com/bl/wp-content/uploads/sites/2/2014/01/finding-nemo-poster.jpg);
+  background-position: top center;
+}
+
+.show3 {
+  background-image: url(http://photos1.blogger.com/x/blogger/4718/1605/1600/392061/poster%20nacho.jpg);
+  background-position: top center;
+}
+
+.show4 {
+  background-image: url(http://img2.wikia.nocookie.net/__cb20131015071210/jaws/images/d/da/Jaws-movie-poster.jpg);
+  background-position: bottom center;
+}
+
+.description {
+    opacity: 0;
+    transition: opacity 0.5s;
+    background-color: rgba(0, 255, 198, 0.7);
+}
+
+.description:hover {
+    opacity: 1;
+}
+
+.description p {
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    top: 300px;
+    left: 300px;
+    transform: translateY(-50%) translateX(-50%);
+    font-family: 'Source Code Pro';
+    font-size: 15px;
+}
+
+.description p span {
+    font-size: 30px;
+}
+
+#contact {
+    background-color: #e1e1e1;
+    text-align: center;
+}
+
+#contact h1 {
+    font-family: 'Beon';
+    color: #333;
+    margin-top: 150px;
+}
+
+@media screen and (max-width: 600px) {
+    #diamonds-wrap {
+        height: 200px;
+        width: 400px;
+    }
+    
+    #diamonds-wrap #center-diamond, #diamonds-wrap .diamond:nth-child(1) {
+        left: 100px;
+        top: 50px;
+    }
 }
