--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ body {
 #scroll #line-wrap {
     height: 30px;
     width: 100%;
-    position: relative;;
+    position: relative;
 }
 
 #scroll #line-wrap #scroll-line {
@@ -151,7 +151,8 @@ body {
     position: absolute;
     transform: rotate(45deg);
     transform-origin: 50% 50%;
-    width: 50%;
+    width: 400px;
+    height: 400px;
     left: 200px;
 }
 
@@ -168,7 +169,8 @@ body {
 #diamonds-wrap .mini {
     background-color: #e1e1e1;
     z-index: 9;
-    width: 25%;
+    width: 200px;
+    height: 200px;
     top: 100px;
     left: 10px;
 }
@@ -177,6 +179,17 @@ body {
     position: absolute;
     right: 10px;
     left: auto;
+}
+
+#diamonds-wrap p {
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    z-index: 10;
+    transform: translateX(-50%);
+    color: #aaa!important;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 #bio {
@@ -190,7 +203,8 @@ body {
 
 #bio #bio-wrap {
     width: 80%;
-    margin-left: 10%;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 100px;
     background-color: rgba(255, 255, 255, 0.8);
 }
@@ -199,7 +213,7 @@ body {
     font-family: 'Beon', sans-serif;
     color: #333;
     font-weight: 100;
-    padding: 50px 20px;
+    padding: 3rem 1rem 1rem 1.5rem;
 }
 
 #bio p {
@@ -295,23 +309,22 @@ body {
 }
 
 .show1 {
-  background-image: url(http://i0.wp.com/www.ucreative.com/wp-content/uploads/2011/10/Horror-Movie-Posters-19.jpg?w=500);
-  background-position: top center;
+    background-image: url(../img/overwatch_preview.png);
+    background-position: center center;
 }
 
 .show2 {
-  background-image: url(http://a.dilcdn.com/bl/wp-content/uploads/sites/2/2014/01/finding-nemo-poster.jpg);
-  background-position: top center;
+    background-image: url(../img/lemony.png);
 }
 
 .show3 {
-  background-image: url(http://photos1.blogger.com/x/blogger/4718/1605/1600/392061/poster%20nacho.jpg);
-  background-position: top center;
+    background-image: url(../img/Mummie.png);
+    background-position: top center;
 }
 
 .show4 {
-  background-image: url(http://img2.wikia.nocookie.net/__cb20131015071210/jaws/images/d/da/Jaws-movie-poster.jpg);
-  background-position: bottom center;
+    background-image: url(../img/Lions.png);
+    background-position: center center;
 }
 
 .description {
@@ -339,15 +352,188 @@ body {
     font-size: 30px;
 }
 
+#content-loader {
+    width: 100%;
+    height: 0;
+    position: relative;
+}
+
 #contact {
-    background-color: #e1e1e1;
+    background-color: #1d3d63;
     text-align: center;
+    width: 100%;
+    color: #fff;
+    margin-top: 50px;
 }
 
 #contact h1 {
     font-family: 'Beon';
-    color: #333;
-    margin-top: 150px;
+    padding-top: 50px;
+    letter-spacing: 2px;
+}
+
+#contact p {
+    font-weight: 100;
+    padding-top: 10px;
+    font-size: 0.8rem;
+}
+
+#contact #socials {
+    position: relative;
+    height: 300px;
+    width: 100%;
+}
+
+#contact #socials .icon {
+    position: absolute;
+    height: 40px;
+    width: 40px;
+}
+
+#contact #socials .icon img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+}
+
+#contact #socials .icon:nth-child(1) {
+    top: 20px;
+    left: 10%;
+}
+
+#contact #socials .icon:nth-child(2) {
+    top: 60px;
+    left: 50%;
+}
+
+#contact #socials .icon:nth-child(3) {
+    top: 170px;
+    left: 35%;
+}
+
+#contact #socials .icon:nth-child(4) {
+    top: 100px;
+    left: 25%;
+}
+
+#contact #socials .icon:nth-child(5) {
+    top: 150px;
+    right: 30%;
+}
+
+#contact #socials .icon:nth-child(6) {
+    top: 70px;
+    right: 10%;
+}
+
+#contact #socials .icon:nth-child(7) {
+    top: 220px;
+    left: 15%;
+}
+
+#contact #socials .icon:nth-child(8) {
+    top: 200px;
+    right: 20%;
+}
+
+#contact #socials .icon:nth-child(9) {
+    top: 220px;
+    right: 40%;
+}
+
+footer {
+    background-color: #1d3d63;
+    height: 45px;
+}
+
+#stripe {
+    height: 30px;
+    width: 100%;
+    background-color: #EFECEC;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+#stripe div {
+    height: 10px;
+    width: 10px;
+    display: inline-block;
+    transform-origin: bottom;
+    transform: scale(2)
+}
+
+#stripe div img {
+    height: 100%;
+}
+
+#stripe p {
+    font-size: 14px;
+    line-height: 30px;
+    display: inline-block;
+}
+
+#pattern {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#pattern .patterns {
+    display: flex;
+    height: 100%;
+    width: 80%;
+    position: absolute;
+    margin-left: 10%;
+    margin-right: 10%;
+    align-items: center;
+}
+
+#pattern .patterns div {
+    width: 50%;
+    height: 80%;
+    position: relative;
+}
+
+#pattern .patterns #descr p {
+    padding: 0 10px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+#pattern .patterns .thumbnail img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+}
+
+.wireframes {
+    height: 100%;
+    background-color: plum;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.photoshop {
+    height: 100%;
+    background-color: palegoldenrod;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.doodles {
+    height: 100%;
+    background-color: dimgrey;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 @media screen and (max-width: 600px) {
